// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginGrid should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-bdfBwQ fpbFeh"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="Pagination__Wrapper-x7juhx-0 klvluR mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <div
            class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-bdfBwQ fpbFeh"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    />
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should split by page 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="Pagination__Wrapper-x7juhx-0 klvluR mt-5"
        data-testid="Pagination"
      >
        <button
          class="Button-mdtvtf-0 cyPweQ"
          data-testid="Pagination__previous"
          type="button"
        >
          <div
            class="sc-bdfBwQ TENjd mr-2"
            height="10"
            width="10"
          >
            <svg>
              back.svg
            </svg>
          </div>
          Previous
        </button>
        <div
          class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <div
            class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
          >
            1
          </div>
          <div
            class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger delete 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-bdfBwQ fpbFeh"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="Pagination__Wrapper-x7juhx-0 klvluR mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <div
            class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger select 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-bdfBwQ fpbFeh"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
              <div
                class="flex items-center"
                data-testid="ReviewRating"
              >
                <div
                  class="relative"
                >
                  <div
                    class="overflow-hidden absolute"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-4"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-secondary-500 dark:bg-theme-secondary-700 w-4"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="Pagination__Wrapper-x7juhx-0 klvluR mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <div
            class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
